--- a/package.json
+++ b/package.json
@@ -3,6 +3,23 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.7.2",
+    "@fullcalendar/adaptive": "^5.3.1",
+    "@fullcalendar/bootstrap": "^5.3.1",
+    "@fullcalendar/core": "^5.3.1",
+    "@fullcalendar/daygrid": "^5.3.2",
+    "@fullcalendar/google-calendar": "^5.3.1",
+    "@fullcalendar/interaction": "^5.3.1",
+    "@fullcalendar/list": "^5.3.1",
+    "@fullcalendar/moment": "^5.3.1",
+    "@fullcalendar/moment-timezone": "^5.3.1",
+    "@fullcalendar/resource-common": "^5.3.1",
+    "@fullcalendar/resource-daygrid": "^5.3.1",
+    "@fullcalendar/resource-timegrid": "^5.3.1",
+    "@fullcalendar/resource-timeline": "^5.3.1",
+    "@fullcalendar/rrule": "^5.3.1",
+    "@fullcalendar/scrollgrid": "^5.3.1",
+    "@fullcalendar/timegrid": "^5.3.1",
+    "@fullcalendar/timeline": "^5.3.1",
     "@nguyenthanh1995/fontawesomepro": "^0.0.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
@@ -10,6 +27,7 @@
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.2.1",
     "cleave.js": "^1.4.7",
+    "fullcalendar-scheduler": "^5.3.2",
     "izitoast": "^1.4.0",
     "jquery": "^3.5.1",
     "jquery.nicescroll": "^3.7.4",
